resolved overflow issue

--- a/resume/src/App.css
+++ b/resume/src/App.css
@@ -28,6 +28,7 @@
 }
 .Header1{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   gap: 3px; 
@@ -36,6 +37,7 @@
 .Header2{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   gap: 3px; 
   justify-content: center;
